--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,12 @@
-### IntelliJ IDEA ###
-.idea
-*.iws
 *.iml
-*.ipr
-
-### Java ###
+.idea
 target
-
-### React JS ###
-/node_modules
-/.pnp
-.pnp.js
-
-/coverage
-
-/build
-
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+bower_components
+node_modules
+node
+*.log
+asciidoctor.css
+README.html
+built
+dump.rdb
+package-lock.json
