--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 #The amount of time the session will remain active before inactive sign out
 server.servlet.session.timeout=10
+
+#The base path for the server
+spring.data.rest.base-path=/rps
